# agent-gym

./: .gitignore  Cargo.toml
crates/core/src/: game.rs  lib.rs  time.rs
crates/games/: README.md
crates/games/td/sim/: Cargo.toml
crates/games/td/sim/src/: actions.rs  config.rs  events.rs  game.rs  lib.rs  observe.rs  pathing.rs  systems.rs  world.rs
crates/games/td/sim/src/mcp/: mod.rs  server.rs  types.rs
crates/games/td/types/: Cargo.toml
crates/games/td/types/src/: lib.rs
crates/games/td/viewer/: Cargo.toml
crates/games/td/viewer/src/game/: components.rs  mod.rs  resources.rs
crates/games/td/viewer/src/networking/: client.rs  mod.rs  state_sync.rs
crates/games/td/viewer/src/rendering/: effects.rs  grid.rs  mobs.rs
crates/games/td/viewer/src/ui/: hud.rs  match_list.rs  mod.rs
crates/games/td/viewer/web/: index.html
crates/games/td/web/: Cargo.toml
crates/games/td/web/src/: main.rs
crates/host/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: errors.rs  events.rs  lib.rs  match_handle.rs  server.rs  tick_loop.rs  types.rs
crates/server/tests/: integration.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: envelope.rs  lib.rs  time.rs  types.rs
crates/sim_games/td/: Cargo.toml
crates/sim_games/td-viewer/app/: Cargo.toml  Trunk.toml
crates/sim_games/td-viewer/app/src/: main.rs
crates/sim_games/td-viewer/app/src/game/: components.rs  resources.rs
crates/sim_games/td-viewer/app/src/networking/: mod.rs  state_sync.rs
crates/sim_games/td-viewer/app/src/rendering/: grid.rs  mod.rs  towers.rs
crates/sim_games/td-viewer/app/src/ui/: hud.rs  match_list.rs  mod.rs
crates/sim_games/td-viewer/server/src/: main.rs
crates/sim_games/td/src/: actions.rs  game.rs  lib.rs  pathing.rs  state.rs
crates/sim_games/td/src/mcp/: server.rs  types.rs
crates/sim_host/: Cargo.toml
crates/sim_host/src/: host.rs  lib.rs
crates/sim_server/: Cargo.toml
crates/sim_server/src/: match_handle.rs  server.rs  types.rs
tools/headless_runner/: Cargo.toml
tools/headless_runner/src/: main.rs
tools/multiplayer_demo/: Cargo.toml
tools/multiplayer_demo/src/: main.rs
