[workspace]
resolver = "2"
members = [
    "crates/sim_core",
    "crates/sim_host",
    "crates/sim_server",
    "crates/sim_games/td",
    "crates/sim_games/td-viewer/app",
    "crates/sim_games/td-viewer/server",
]
default-members = [
    "crates/sim_core",
    "crates/sim_host",
    "crates/sim_server",
    "crates/sim_games/td",
    "crates/sim_games/td-viewer/server",
]
