[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/host",
    "crates/server",
    "crates/games/td/types",
    "crates/games/td/sim",
    "crates/games/td/viewer",
]
default-members = [
    "crates/core",
    "crates/host",
    "crates/server",
    "crates/games/td/types",
    "crates/games/td/sim",
]
