[package]
name = "sim_td"
version = "0.1.0"
edition = "2021"

[dependencies]
sim_core = { path = "../../../core" }
sim_server = { path = "../../../server" }
slotmap = "1"

# MCP dependencies
rmcp = { version = "0.14", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[[bin]]
name = "td-mcp-server"
path = "src/bin/td_mcp_server.rs"
