[package]
name = "td-viewer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_mesh",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "default_font",
    "png",
    "webgl2",
] }

# Networking
ehttp = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async channels
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "History", "Location"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
